<resources>
    <string name="app_name">Meal Planner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Recipe Details -->
    <string name="recipe_image">Recipe Image</string>
    <string name="time">Time</string>
    <string name="servings">Servings</string>
    <string name="calories">Calories</string>
    <string name="difficulty">Difficulty</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="your_rating">Your Rating</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    
    <!-- Recipe List -->
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="no_recipes">No recipes found\nTap + to add your first recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="search_recipes">Search recipes...</string>
    
    <!-- Meal Plan -->
    <string name="previous_week">Previous Week</string>
    <string name="next_week">Next Week</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_breakfast">+ Add breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="add_lunch">+ Add lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_dinner">+ Add dinner</string>
    <string name="snacks">Snacks</string>
    <string name="add_snack">+ Add snack</string>
    <string name="daily_nutrition">Daily Nutrition</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="generate_grocery_list">Generate Grocery List</string>
    <string name="today">Today</string>
    <string name="clear_plan">Clear Plan</string>
    
    <!-- Grocery List -->
    <string name="search_items">Search items...</string>
    <string name="filter">Filter</string>
    <string name="items_checked">Items checked: %1$d/%2$d</string>
    <string name="no_grocery_items">No grocery items found</string>
    <string name="add_grocery_item">Add grocery item</string>
    <string name="clear_completed">Clear Completed</string>
    <string name="clear_all">Clear All</string>
    <string name="sort">Sort</string>
    <string name="by_category">By Category</string>
    <string name="by_name">By Name</string>
    <string name="edit_item">Edit item</string>
    
    <!-- Add Grocery Dialog -->
    <string name="item_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="category">Category</string>
    
    <!-- Dashboard -->
    <string name="welcome">Welcome!</string>
    <string name="view_recipes">View Recipes</string>
    <string name="view_meal_plan">View Meal Plan</string>
    <string name="view_grocery_list">View Grocery List</string>
    <string name="logout">Logout</string>
    
    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    
    <!-- Menu Items -->
    <string name="share">Share</string>
    <string name="add_to_meal_plan">Add to Meal Plan</string>
</resources>